--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
 
   mysql:
     image: mysql:5.7
-    container: db-for-go
+    container_name: db-for-go
     command:
         - --character-set-server=utf8mb4
         - --collation-server=utf8mb4_unicode_ci
